HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/SuperclassCycle/Expected.uv
//! Expected diagnostic metadata for the SuperclassCycle rejected-source specimen.

expectedDiagnostic("E-TYP-2508", "rule.14.Superclass-Cycle")
